<resources>
    <string name="app_name">MyAndroidApplication</string>
    <string name="textview">TextView</string>
    <string name="text_bold">bold属性</string>
    <string name="shadow_text">shadow_text</string>
    <string name="test_text">哈哈哈哈哈哈哈哈哈嘻嘻嘻嘻嘻嘻嘻嘻嘻嘻嘻恩恩恩恩恩恩恩恩</string>
    <string name="edittext">EditText</string>
    <string name="add">add</string>
    <string name="button">Button</string>
    <string name="imageview">imageview</string>
    <string name="radiobtn_checkbox"><![CDATA[RadioBtn & CheckBox]]></string>
    <string name="choice_notice">您选择的性别是:</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="post">提交</string>
    <string name="apple">苹果</string>
    <string name="orange">橘子</string>
    <string name="banana">香蕉</string>
    <string name="count">统计</string>
    <string name="togglebtn_switchbtn"><![CDATA[ToggleBtn & SwitchBtn]]></string>
    <string name="progress">progress</string>
    <string name="seekbar">SeekBar</string>
    <string name="ratingbar"><![CDATA[SeekBar & RatingBar]]></string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="listview">ListView</string>
    <string name="service">Service</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">关闭服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="check">查询</string>
    <string name="intentservice">IntentService</string>
    <string name="spinner"><![CDATA[Spinner & AutoCompleteTextView]]></string>
    <string name="dialog">Dialog</string>
    <string name="popupwindow_menu"><![CDATA[popupwindow&menu]]></string>
    <string name="popupwindow">显示PopupWindow</string>
    <string name="webview">webview</string>
    <string name="log_out_notice">再按一次退出程序</string>
    <string name="webview2">webview2</string>
    <string name="webview3">webview3</string>
    <string name="turn">旋转</string>
    <string name="loading">第三方loading</string>
    <string name="drawable">drawable</string>
    <string name="toolbar">toolbar</string>
    <string name="multirv">multiRv</string>
    <string name="coordinatorlayout">CoordinatorLayout</string>

    <string name="coordinatorlayout2">CoordinatorLayout2</string>
    <string name="disklrucache">DiskLruCache</string>
    <string name="retrofit">retrofit</string>
    <string name="expandlv">ExpandLv</string>
    <string name="popright">PopRight</string>
    <string name="animstudy">AnimStudy</string>
    <string name="proanimstudy">ProAnimStudy</string>
    <string name="proanimstudy2">proanimstudy2</string>
    <string name="eventstudy">eventstudy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animviewpager">AnimViewPager</string>
    <string name="behaviorstudy1">BehaviorStudy1</string>
    <string name="viewfilpperstudy">ViewFilpperStudy</string>
    <string name="rvscrollstudy">RVScrollStudy</string>
    <string name="rvloadstudy">RvLoadStudy</string>
    <string name="mpchartstudy">MPChartStudy</string>
    <string name="mpchartstudy2">MPChartStudy2</string>
    <string name="tabstudy">TabStudy</string>
    <string name="rxjavastudy">RxJavaStudy</string>
</resources>
