<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"/>

        <Button
            android:id="@+id/btn_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"/>

        <Button
            android:id="@+id/btn_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edittext"/>

        <Button
            android:id="@+id/btn_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imageview"/>

        <Button
            android:id="@+id/btn_05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn_checkbox"/>

        <Button
            android:id="@+id/btn_06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/togglebtn_switchbtn"/>

        <Button
            android:id="@+id/btn_07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress"/>

        <Button
            android:id="@+id/btn_08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seekbar"/>

        <Button
            android:id="@+id/btn_09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingbar"/>

        <Button
            android:id="@+id/btn_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview"/>

        <Button
            android:id="@+id/btn_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service"/>

        <Button
            android:id="@+id/btn_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner"/>

        <Button
            android:id="@+id/btn_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog"/>

        <Button
            android:id="@+id/btn_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popupwindow_menu"/>

        <Button
            android:id="@+id/btn_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webview"/>

        <Button
            android:id="@+id/btn_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webview2"/>

        <Button
            android:id="@+id/btn_17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webview3"/>

        <Button
            android:id="@+id/btn_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn"/>
    </LinearLayout>


</ScrollView>
